<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renda"
            android:textAllCaps="true"
            android:textColor="@color/laranja"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_img" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_img" />

        <TextView
            android:id="@+id/renda_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/renda_mensal"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <EditText
            android:id="@+id/renda_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:inputType="numberDecimal"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/renda_txt" />


        <TextView
            android:id="@+id/patrimonio_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/patrimonio_liquido"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/renda_edt"
            app:layout_constraintTop_toBottomOf="@id/renda_edt" />

        <EditText
            android:id="@+id/patrimonio_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="numberDecimal"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/renda_edt"
            app:layout_constraintStart_toStartOf="@id/renda_edt"
            app:layout_constraintTop_toBottomOf="@id/patrimonio_txt" />

        <android.widget.Button
            android:id="@+id/continue_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_custom"
            android:backgroundTint="@color/laranja"
            android:text="@string/continuar"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/patrimonio_edt"
            app:layout_constraintStart_toStartOf="@id/patrimonio_edt"
            app:layout_constraintTop_toBottomOf="@id/patrimonio_edt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>