<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mybank.ui.fragments.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacoes_pessoais"
                android:textAllCaps="true"
                android:textColor="@color/laranja"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/back_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_img" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_img" />

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nome_completo"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/back_img"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <TextView
                android:id="@+id/name_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewModel.name}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/name_txt"
                app:layout_constraintTop_toBottomOf="@id/name_txt" />

            <ImageView
                android:id="@+id/name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toTopOf="@id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/name_client_txt" />

            <TextView
                android:id="@+id/cpf_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/cpf"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/name_client_txt"
                app:layout_constraintTop_toBottomOf="@id/name_client_txt" />

            <TextView
                android:id="@+id/cpf_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewModel.cpf}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/cpf_txt"
                app:layout_constraintTop_toBottomOf="@id/cpf_txt" />

            <ImageView
                android:id="@+id/cpf_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toTopOf="@id/divider3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/cpf_client_txt" />

            <TextView
                android:id="@+id/data_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/data_de_nascimento"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/cpf_client_txt"
                app:layout_constraintTop_toBottomOf="@id/cpf_client_txt" />

            <TextView
                android:id="@+id/data_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewModel.data}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/data_txt"
                app:layout_constraintTop_toBottomOf="@id/data_txt" />

            <ImageView
                android:id="@+id/data_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toTopOf="@id/divider4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/data_client_txt" />

            <TextView
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/data_client_txt"
                app:layout_constraintTop_toBottomOf="@id/data_client_txt" />

            <TextView
                android:id="@+id/email_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewModel.email}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/email_txt"
                app:layout_constraintTop_toBottomOf="@id/email_txt" />

            <ImageView
                android:id="@+id/email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toTopOf="@id/divider5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider4" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/email_client_txt" />

            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/celular"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/email_client_txt"
                app:layout_constraintTop_toBottomOf="@id/email_client_txt" />

            <TextView
                android:id="@+id/phone_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewModel.phone}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/phone_txt"
                app:layout_constraintTop_toBottomOf="@id/phone_txt" />

            <ImageView
                android:id="@+id/phone_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toTopOf="@id/divider6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider5" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/phone_client_txt" />

            <TextView
                android:id="@+id/address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/endereco"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/phone_txt"
                app:layout_constraintTop_toBottomOf="@id/phone_client_txt" />

            <TextView
                android:id="@+id/city_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{viewModel.city}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/address_txt"
                app:layout_constraintTop_toBottomOf="@id/address_txt" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/address_divider"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/city_client_txt"
                app:layout_constraintEnd_toStartOf="@id/state_client_txt"
                app:layout_constraintStart_toEndOf="@id/city_client_txt"
                app:layout_constraintTop_toTopOf="@id/city_client_txt" />

            <TextView
                android:id="@+id/state_client_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{viewModel.state}"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/city_client_txt"
                app:layout_constraintStart_toEndOf="@id/address_divider"
                app:layout_constraintTop_toTopOf="@id/city_client_txt" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/divider1"
                app:layout_constraintStart_toStartOf="@id/divider1"
                app:layout_constraintTop_toBottomOf="@id/city_client_txt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>